--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
+    <supports-screens android:largeScreens="true" android:normalScreens="true" android:smallScreens="false"/>
 
     <application
         android:icon="@drawable/ic_launcher"
