--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -6,7 +6,26 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-    <supports-screens android:largeScreens="true" android:normalScreens="true" android:smallScreens="false"/>
+
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+    </application>
+
+</manifest><manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="csci498.ccard.lunchlist"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="15" />
+
+    <supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="false" />
 
     <application
         android:icon="@drawable/ic_launcher"
