--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:smallScreens="false" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/file_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
