--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -25,7 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailForm"></activity>
+        <activity android:name=".apt.tutorial.DetailForm"></activity>
+        
     </application>
 
 </manifest>
