--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:largeScreens="true"
         android:normalScreens="true"
         android:smallScreens="false" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:icon="@drawable/file_icon"
