modified activity manifest to include the new editpreferences activity per chap 13 step 2

--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".apt.tutorial.DetailForm"></activity>
+        <activity android:name=".apt.tutorial.EditPreferences"></activity>
         
     </application>
 
