-added feedactivity to manifest and activty -added a static feedtask class in feedactivty per chap 15 step 5

--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </activity>
         <activity android:name=".apt.tutorial.DetailForm"></activity>
         <activity android:name=".apt.tutorial.EditPreferences"></activity>
+        <activity android:name=".apt.tutorial.FeedActivity"></activity>
         
     </application>
 
