added feedservice class to lunchlist and updated the manifest to with this service per chap 16 step 1

--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:name=".apt.tutorial.DetailForm"></activity>
         <activity android:name=".apt.tutorial.EditPreferences"></activity>
         <activity android:name=".apt.tutorial.FeedActivity"></activity>
-        
+        <service android:name=".FeedService"></service>
     </application>
 
 </manifest>
