--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:icon="@drawable/file_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps"/>
         <activity
             android:name=".LunchList"
             android:label="@string/title_activity_main" >
@@ -32,6 +33,7 @@
         <activity android:name=".apt.tutorial.DetailForm"></activity>
         <activity android:name=".apt.tutorial.EditPreferences"></activity>
         <activity android:name=".apt.tutorial.FeedActivity"></activity>
+        <activity android:name=".apt.tutorial.RestaurantMap"></activity>
         <service android:name=".apt.tutorial.FeedService"></service>
     </application>
 
