added alarm layout.xml and added alarmactivity and necessary code added onalarmreceiver and code to allow it to function updated the manifest for these new classes per chap 19 step 5

--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".apt.tutorial.EditPreferences"></activity>
         <activity android:name=".apt.tutorial.FeedActivity"></activity>
         <activity android:name=".apt.tutorial.RestaurantMap"></activity>
+        <activity android:name=".apt.tutorial.AlarmActivity"></activity>
         <service android:name=".apt.tutorial.FeedService"></service>
         <receiver android:name=".apt.tutorial.OnBootReceiver"
             android:enabled="false">
@@ -42,6 +43,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+        <receiver android:name=".apt.tutorial.OnAlarmReceiver"></receiver>
     </application>
 
 </manifest>
