--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -44,6 +44,16 @@
             </intent-filter>
         </receiver>
         <receiver android:name=".apt.tutorial.OnAlarmReceiver"></receiver>
+        <receiver android:name=".apt.tutorial.AppWidget"
+            android:lable="@string/app_name"
+            android:icon="@drawable/icon">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_provider"/>
+        </receiver>
     </application>
 
 </manifest>
