--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -45,7 +45,7 @@
         </receiver>
         <receiver android:name=".apt.tutorial.OnAlarmReceiver"></receiver>
         <receiver android:name=".apt.tutorial.AppWidget"
-            android:lable="@string/app_name"
+            android:label="@string/app_name"
             android:icon="@drawable/icon">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
