did some formating of widgetservice, updated strings.xml, updated manifest with new service per chap 21 step 7

--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".apt.tutorial.RestaurantMap"></activity>
         <activity android:name=".apt.tutorial.AlarmActivity"></activity>
         <service android:name=".apt.tutorial.FeedService"></service>
+        <service android:name=".apt.tutorial.WidgetService"></service>
         <receiver android:name=".apt.tutorial.OnBootReceiver"
             android:enabled="false">
             <intent-filter>
