added helppae activity that manages the displaying of the web page also added it to the manifest per chap 25 step 2

--- a/LunchList/AndroidManifest.xml
+++ b/LunchList/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".apt.tutorial.FeedActivity"></activity>
         <activity android:name=".apt.tutorial.RestaurantMap"></activity>
         <activity android:name=".apt.tutorial.AlarmActivity"></activity>
+        <activity android:name=".apt.tutorial.HelpPage"></activity>
         <service android:name=".apt.tutorial.FeedService"></service>
         <service android:name=".apt.tutorial.WidgetService"></service>
         <service android:name=".apt.tutorial.ListWidgetService"
